--- a/usr/share/polkit-1/actions/po/is.po
+++ b/usr/share/polkit-1/actions/po/is.po
@@ -1,11 +1,11 @@
-# Icelandic translation for xubuntu-default-settings
+# Icelandic translation for pardus-xfce-default-settings
 # Copyright (c) 2015 Rosetta Contributors and Canonical Ltd 2015
-# This file is distributed under the same license as the xubuntu-default-settings package.
+# This file is distributed under the same license as the pardus-xfce-default-settings package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2015.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xubuntu-default-settings\n"
+"Project-Id-Version: pardus-xfce-default-settings\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2015-02-09 22:36-0500\n"
 "PO-Revision-Date: 2015-04-23 21:14+0000\n"
@@ -17,6 +17,6 @@ msgstr ""
 "X-Launchpad-Export-Date: 2016-10-06 04:30+0000\n"
 "X-Generator: Launchpad (build 18217)\n"
 
-#: ../com.ubuntu.pkexec.mousepad.policy.in.h:1
+#: ../tr.org.pardus.pkexec.mousepad.policy.in.h:1
 msgid "Authentication is required to run mousepad as root"
 msgstr "Auðkenningar er krafist til að keyra mousepad sem root"
