--- a/usr/share/polkit-1/actions/po/pt.po
+++ b/usr/share/polkit-1/actions/po/pt.po
@@ -1,11 +1,11 @@
-# Portuguese translation for xubuntu-default-settings
+# Portuguese translation for pardus-xfce-default-settings
 # Copyright (c) 2014 Rosetta Contributors and Canonical Ltd 2014
-# This file is distributed under the same license as the xubuntu-default-settings package.
+# This file is distributed under the same license as the pardus-xfce-default-settings package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2014.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xubuntu-default-settings\n"
+"Project-Id-Version: pardus-xfce-default-settings\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2015-02-09 22:36-0500\n"
 "PO-Revision-Date: 2014-08-20 10:41+0000\n"
@@ -17,6 +17,6 @@ msgstr ""
 "X-Launchpad-Export-Date: 2016-10-06 04:30+0000\n"
 "X-Generator: Launchpad (build 18217)\n"
 
-#: ../com.ubuntu.pkexec.mousepad.policy.in.h:1
+#: ../tr.org.pardus.pkexec.mousepad.policy.in.h:1
 msgid "Authentication is required to run mousepad as root"
 msgstr "É necessário autenticação para executar o mousepad como root"
