--- a/usr/share/polkit-1/actions/po/sr.po
+++ b/usr/share/polkit-1/actions/po/sr.po
@@ -1,11 +1,11 @@
-# Serbian translation for xubuntu-default-settings
+# Serbian translation for pardus-xfce-default-settings
 # Copyright (c) 2016 Rosetta Contributors and Canonical Ltd 2016
-# This file is distributed under the same license as the xubuntu-default-settings package.
+# This file is distributed under the same license as the pardus-xfce-default-settings package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2016.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: xubuntu-default-settings\n"
+"Project-Id-Version: pardus-xfce-default-settings\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2015-02-09 22:36-0500\n"
 "PO-Revision-Date: 2016-02-11 09:50+0000\n"
@@ -17,7 +17,7 @@ msgstr ""
 "X-Launchpad-Export-Date: 2016-10-06 04:30+0000\n"
 "X-Generator: Launchpad (build 18217)\n"
 
-#: ../com.ubuntu.pkexec.mousepad.policy.in.h:1
+#: ../tr.org.pardus.pkexec.mousepad.policy.in.h:1
 msgid "Authentication is required to run mousepad as root"
 msgstr ""
 "Потврђивање идентитета је потребно за администраторско покретање табле миша"
