--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+pardus-xfce-default-settings (2016.3) pardus; urgency=medium
+
+  [ Yusuf Düzgün ]
+  * Add or statement for lightdm's default session
+  * Enable lightdm user list
+
+  [ karbo ]
+
+ -- karbo <karbo@evo>  Fri, 25 Nov 2016 14:26:42 +0300
+
 pardus-xfce-default-settings (2016.2) pardus; urgency=medium
 
   * Update Makefile
