--- a/usr/share/polkit-1/actions/po/gl.po
+++ b/usr/share/polkit-1/actions/po/gl.po
@@ -1,11 +1,11 @@
-# Galician translation for pardus-xfce-default-settings
+# Galician translation for pardus-xfce-settings
 # Copyright (c) 2015 Rosetta Contributors and Canonical Ltd 2015
-# This file is distributed under the same license as the pardus-xfce-default-settings package.
+# This file is distributed under the same license as the pardus-xfce-settings package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2015.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: pardus-xfce-default-settings\n"
+"Project-Id-Version: pardus-xfce-settings\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2015-02-09 22:36-0500\n"
 "PO-Revision-Date: 2015-09-18 14:55+0000\n"
