--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pardus-xfce-settings (2017.1) pardus; urgency=medium
+
+  * Change thunar-volman settings in order to fix live session automount bug
+
+ -- Yunusemre Şentürk <yunusemre.senturk@pardus.org.tr>  Wed, 15 Mar 2017 16:31:17 +0300
+
 pardus-xfce-settings (2016.7) pardus; urgency=medium
 
   [ Yekta Leblebici ]
