--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pardus-xfce-settings (2017.2) pardus; urgency=medium
+
+  * Change some default keyboard-shortcuts for Pardus
+
+ -- Yunusemre Şentürk <yunusemre.senturk@pardus.org.tr>  Tue, 21 Mar 2017 11:34:07 +0300
+
 pardus-xfce-settings (2017.1) pardus; urgency=medium
 
   * Change thunar-volman settings in order to fix live session automount bug
