--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pardus-xfce-settings (2017.3) pardus; urgency=medium
+
+  * Change default mail reader icedove --> thunderbird
+
+ -- Yunusemre Şentürk <yunusemre.senturk@pardus.org.tr>  Tue, 28 Mar 2017 15:04:25 +0300
+
 pardus-xfce-settings (2017.2) pardus; urgency=medium
 
   * Change some default keyboard-shortcuts for Pardus
