--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pardus-xfce-settings (2017.4) pardus; urgency=medium
+
+  * Change Default window manager theme and remove preinst script
+
+ -- Yunusemre Şentürk <yunusemre.senturk@pardus.org.tr>  Mon, 05 Jun 2017 15:00:15 +0300
+
 pardus-xfce-settings (2017.3) pardus; urgency=medium
 
   * Change default mail reader icedove --> thunderbird
