--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pardus-xfce-settings (2017.5) onyedi; urgency=medium
+
+  * Add debian-installer-launcher to favorites on whisker
+
+ -- Yunusemre Şentürk <yunusemre.senturk@pardus.org.tr>  Fri, 08 Sep 2017 10:20:42 +0300
+
 pardus-xfce-settings (2017.4) pardus; urgency=medium
 
   * Change Default window manager theme and remove preinst script
