--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pardus-xfce-settings (2017.6) onyedi; urgency=medium
+
+  * Change default themes and libreoffice default icon set
+
+ -- Yunusemre Şentürk <yunusemre.senturk@pardus.org.tr>  Wed, 13 Sep 2017 15:11:38 +0300
+
 pardus-xfce-settings (2017.5) onyedi; urgency=medium
 
   * Add debian-installer-launcher to favorites on whisker
