--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pardus-xfce-settings (2017.7) onyedi; urgency=medium
+
+  * Update default terminal colors and system-tray power manager icon
+
+ -- Yunusemre Şentürk <yunusemre.senturk@pardus.org.tr>  Thu, 14 Sep 2017 14:31:37 +0300
+
 pardus-xfce-settings (2017.6) onyedi; urgency=medium
 
   * Change default themes and libreoffice default icon set
