--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pardus-xfce-settings (2018.3) onyedi; urgency=medium
+
+  * Change libreoffice default symbol set from sifr to colibre
+
+ -- Yunusemre Şentürk <yunusemre.senturk@pardus.org.tr>  Tue, 28 Aug 2018 14:46:18 +0300
+
 pardus-xfce-settings (2018.2) onyedi; urgency=medium
 
   * Add pardus-store to favorites
