--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pardus-xfce-settings (2019.0) ondokuz; urgency=medium
+
+  * Change artifact location and itself
+
+ -- Yunusemre Şentürk <yunusemre.senturk@pardus.org.tr>  Mon, 15 Apr 2019 12:37:12 +0300
+
 pardus-xfce-settings (2018.5) unstable; urgency=medium
 
   * Make thunar menubar visible by default
