--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pardus-xfce-settings (2019.9) ondokuz; urgency=medium
+
+  [ Yusuf Düzgün ]
+  * configured for new pardus ondokuz
+
+ -- Yusuf Düzgün <yusuf.duzgun@pardus.org.tr>  Wed, 17 Jul 2019 14:43:50 +0300
+
 pardus-xfce-settings (2019.0) ondokuz; urgency=medium
 
   * Change artifact location and itself
