--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pardus-xfce-settings (2021.0) ondokuz; urgency=medium
+
+  * Update configs for Pardus 21 and Add numlockx
+
+ -- Fatih Altun <fatih.altun@pardus.org.tr>  Tue, 01 Jun 2021 01:55:42 +0300
+
 pardus-xfce-settings (2019.11) ondokuz; urgency=medium
 
   * Change default mail application to thunderbird
