Update changelog for 2021.1 release

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pardus-xfce-settings (2021.1) ondokuz; urgency=medium
+
+  * Add pardus.software to favorites
+
+ -- Fatih Altun <fatih.altun@pardus.org.tr>  Fri, 04 Jun 2021 07:52:57 +0000
+
 pardus-xfce-settings (2021.0) ondokuz; urgency=medium
 
   * Update configs for Pardus 21 and Add numlockx
