--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+pardus-xfce-settings (2021.3) ondokuz; urgency=medium
+
+  * Add square-icons, dragn drop to window buttons and Update panel size to 34
+  * Fix disappearing window buttons problem
+  * Update xfwm4 theme name as pardus-default and title_font to 11
+  * Update time_font to Quicksand Medium, Bold 16
+  * Update whiskermenu icon
+  * Rm .gtkrc-2.0 conf
+  * Update default themes as pardus
+  * Change volume and systray icon orders
+
+ -- Fatih Altun <fatih.altun@pardus.org.tr>  Fri, 20 Aug 2021 00:19:02 +0300
+
 pardus-xfce-settings (2021.2) ondokuz; urgency=medium
 
   * Disable QT_STYLE_OVERRIDE
