--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pardus-xfce-settings (2022.1) ondokuz; urgency=medium
+
+  * Add onboard with conf
+
+ -- Fatih Altun <fatih.altun@pardus.org.tr>  Sat, 08 Jan 2022 16:22:13 +0300
+
 pardus-xfce-settings (2021.5) ondokuz; urgency=medium
 
   * Add print file(s) to thunar right click menu
