--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pardus-xfce-settings (2022.3) ondokuz; urgency=medium
+
+  * Add thunar bookmarks script and autostart file
+  * Fix tile left-right, maximize-hide wm shortcuts
+
+ -- Fatih Altun <fatih.altun@pardus.org.tr>  Mon, 28 Mar 2022 17:33:53 +0300
+
 pardus-xfce-settings (2022.2) ondokuz; urgency=medium
 
   * Add new thunar shortcuts for search and terminal
