--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pardus-xfce-settings (2022.4) ondokuz; urgency=medium
+
+  * Add desktop icons tooltip size as 0
+
+ -- Fatih Altun <fatih.altun@pardus.org.tr>  Wed, 20 Jul 2022 16:07:45 +0300
+
 pardus-xfce-settings (2022.3) ondokuz; urgency=medium
 
   * Add thunar bookmarks script and autostart file
