--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pardus-xfce-settings (2022.6) ondokuz; urgency=medium
+
+  * Update notification theme to Default
+
+ -- Fatih Altun <fatih.altun@pardus.org.tr>  Mon, 26 Dec 2022 18:20:29 +0300
+
 pardus-xfce-settings (2022.5) ondokuz; urgency=medium
 
   * Update ctrl-alt-del shortcut as xfce4-session-logout
